<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_register"
        tools:context="sample.swivelgroup.newsreader.auth.RegisterActivity">

    <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/colorTextHint"
                android:text="@string/text_register" />

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/appCompatTextViewLoginLink"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="Already a member? Login"
                android:textSize="16dp" />
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.constraint.ConstraintLayout>
